--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Kaciel Aires - Designer & Developer</title>
 </head>
 
-<body background="img/fundo.png">
+<body background="img/background-GRANDE.jpg">
 
     <table border="0" width="900" align="center">
         <tr height="89">
