--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Kaciel Aires - Designer & Developer</title>
 </head>
 
-<body>
+<body class="body" background="img/background-GRANDE.jpg">
 
     <table border="0" width="900" align="center">
         <tr height="89">
