--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body class="body" background="img/background-GRANDE.jpg">
 
+   
     <table border="0" width="900" align="center">
         <tr height="89">
             <td>
-                <img src="img/logo.png" alt="">
+                kaciel Aires 
             </td>
 
             <td align="right">
@@ -25,7 +26,7 @@
 
         <tr>
             <td colspan="2">
-                <img src="img/capa.png" alt="">
+                <img src="img/earth-GRANDE.jpg" alt="">
             </td>
         </tr>
 
