--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <tr>
             <td colspan="2">
-                <img width="900px" src="img/earth-GRANDE.jpg" alt="">
+                <img width="900px" src="img/earth-PEQUENA.jpg" alt="">
             </td>
         </tr>
 
