--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 
 
     </table>
+
+    <footer>
+        <h4>Todos os direitos reservados &#174 | By Kaciel Aires</h4>
+    </footer>
     
 </body>
 
