--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <div>
+        <nav>
+            <menu type="toolbar"></menu>
+        </nav>
+    </div>
+
    
     <table border="0" width="900" align="center">
         <tr height="89" >
@@ -86,17 +92,10 @@
 
         </tr>
 
-        <tr>
-            <td colspan="2" align="center">
-                <h4>Todos os direitos reservados &#174</h4>
-            </td>
-        </tr>
+        
 
 
-
-
-
-    </table>-
+    </table>
 
     <footer>
         <h4>Todos os direitos reservados &#174 | By Kaciel Aires</h4>
