--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Kaciel Aires - Designer & Developer</title>
 </head>
@@ -25,7 +24,7 @@
             </td>
 
             <td align="right">
-                <a href="index.html">HOME |</a>
+                <a href="#Quem-sou">HOME |</a>
                 <a href="nossa.html">O QUE EU FAÇO |</a>
                 <a href="contato.html">CONTATO</a>
             </td>
@@ -42,7 +41,7 @@
         <tr>
             <td colspan="2">
             
-            <h2>QUEM SOU</h2>
+            <h2>QUEM SOU<a name="Quem-sou"></a></h2>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nihil pariatur, totam quidem eius sed quibusdam eos explicabo beatae dolorem commodi temporibus quam quaerat perspiciatis necessitatibus! Dolorum deserunt corporis ab?</p>
 
