--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <div>
         <nav>
-            <menu type="toolbar"></menu>
+            <menu type="toolbar">
+                <a href="#Quem-sou">HOME |</a>
+                <a href="#Trabalho">O QUE EU FAÇO |</a>
+                <a href="#Portfolio">PORTFÓLIO</a>
+                <a href="#Contratar">CONTATO |</a>
+            </menu>
         </nav>
     </div>
 
@@ -26,8 +31,9 @@
             <td align="right">
                 <a href="#Quem-sou">HOME |</a>
                 <a href="#Trabalho">O QUE EU FAÇO |</a>
-                <a href="#Contratar">CONTATO |</a>
                 <a href="#Portfolio">PORTFÓLIO</a>
+                <a href="#Contratar">CONTATO |</a>
+                
             </td>
         </tr>
 
