--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="menu-principal">
         <nav>
             <menu type="toolbar">
-                <a href="#Quem-sou">HOME |</a>
-                <a href="#Trabalho">O QUE EU FAÇO |</a>
-                <a href="#Portfolio">PORTFÓLIO</a>
-                <a href="#Contratar">CONTATO |</a>
+                <a href="#Quem-sou">HOME </a> |
+                <a href="#Trabalho">O QUE EU FAÇO </a> |
+                <a href="#Portfolio">PORTFÓLIO</a> |
+                <a href="#Contratar">CONTATO </a>
             </menu>
         </nav>
     </div>
