--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </nav>
     </div>
 
+    <div>
+        <div whith="auto" border="1px" >
+
+        </div>
+    </div>
+
    
     <table border="0" width="900" align="center">
         
