--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <div whith="auto" border="1px" >
+        <div whith="auto" style="border: 3px solid red;" >
 
         </div>
     </div>
