--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div>
 
     <div>
-        <div whith="auto" style="border: 3px solid red;" >
-
+        <div whith="auto" height="400px" style="border: 3px solid red;" >
+            
         </div>
     </div>
 
