--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kaciel Aires - Designer & Developer</title>
+    <title>Kaciel Aires - Design & Tecnologia</title>
 </head>
 
 <body>
@@ -16,6 +16,7 @@
                 <a href="#Quem-sou">HOME </a> |
                 <a href="#Trabalho">O QUE EU FAÇO </a> |
                 <a href="#Portfolio">PORTFÓLIO</a> |
+                <a href="">BLOG</a> |
                 <a href="#Contratar">CONTATO </a>
             </menu>
         </nav>
@@ -23,7 +24,7 @@
 
     <div>
         <div whith="auto" height="400px" style="border: 3px solid red;" >
-            
+
         </div>
     </div>
 
