--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="menu-principal">
         <nav>
-            <menu type="toolbar">
+            <menu type="toolbar" align="left">
                 <a href="#Quem-sou">HOME </a> |
                 <a href="#Trabalho">O QUE EU FAÇO </a> |
                 <a href="#Portfolio">PORTFÓLIO</a> |
