--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
     <div id="menu-principal">
-        <nav>
-            <menu type="toolbar" align="left">
+        <nav style="text-align: left;">
+            <menu type="toolbar" >
                 <a href="#Quem-sou">HOME </a> |
                 <a href="#Trabalho">O QUE EU FAÇO </a> |
                 <a href="#Portfolio">PORTFÓLIO</a> |
