--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 
     <div id="menu-principal">
-        <nav style="text-align: left;">
-            <menu type="toolbar" >
+        <nav>
+            
                 <a href="#Quem-sou">HOME </a> |
                 <a href="#Trabalho">O QUE EU FAÇO </a> |
                 <a href="#Portfolio">PORTFÓLIO</a> |
                 <a href="">BLOG</a> |
                 <a href="#Contratar">CONTATO </a>
-            </menu>
+            
         </nav>
     </div>
 
