--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div id="menu-principal">
 
-        <div>
-        <nav class="conteudo-d-div" >
+        <div class="nav">
+        <nav>
             
                     <a href="#Quem-sou">HOME </a> |
                 
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-        <div class="conteudo" whith="auto" height="400px" style="background: solid red;" >
+        <div class="conteudo-d-div" whith="auto" height="400px" style="background: solid red;" >
 
             <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quo eveniet similique doloremque modi aut, iure laboriosam? Officiis voluptatum culpa perferendis, possimus voluptas quam dicta deserunt, aliquid nulla, eos fugit!Lorem
