--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div>
-        <div class="conteudo-d-div" whith="auto" height="400px" style="background: solid red;" >
+        <div class="conteudo-d-div" whith="auto" height="400px" style="background: red;" >
 
             <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quo eveniet similique doloremque modi aut, iure laboriosam? Officiis voluptatum culpa perferendis, possimus voluptas quam dicta deserunt, aliquid nulla, eos fugit!Lorem
