--- a/index.html
+++ b/index.html
@@ -40,13 +40,9 @@
     </div>
 
     <div>
-        <div class="conteudo-d-div" whith="auto" height="400px" style="background: red;" >
-
-            <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti quo eveniet similique doloremque modi aut, iure laboriosam? Officiis voluptatum culpa perferendis, possimus voluptas quam dicta deserunt, aliquid nulla, eos fugit!Lorem
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos laborum est eius maiores necessitatibus sunt enim, illo iste blanditiis dolores ea at quaerat molestiae deserunt voluptas aspernatur ab. Et, accusantium.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non pariatur aperiam eveniet reiciendis consequuntur aut sint porro distinctio placeat possimus. In voluptatem qui ipsam eligendi sapiente omnis temporibus asperiores rem.
-            </p>
+        <div class="conteudo-d-div" whith="auto" height="auto" >
+         
+            <img src="img/4x/1@4x.png" alt="">
 
         </div>
     </div>
