--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div>
         <div class="conteudo-d-div" whith="auto" height="auto" >
          
-            <img src="img/4x/1@4x.png" alt="">
+            <img src="img/2x/1@2x.png" alt="" width="100%">
 
         </div>
     </div>
