--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="menu-principal">
 
-        <div class="nav" >
+        <div class="nav" style="left: initial;" >
             <nav>
                 
                         <a href="#Quem-sou">HOME </a> |
