--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-        <div>
+        <div class="conteudo-d-div">
             <h2>QUEM SOU<a name="Quem-sou"></a></h2>
             
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nihil pariatur, totam quidem eius sed quibusdam eos explicabo beatae dolorem commodi temporibus quam quaerat perspiciatis necessitatibus! Dolorum deserunt corporis ab?</p>
