--- a/index.html
+++ b/index.html
@@ -48,15 +48,24 @@
     </div>
 
     <div>
-        <div class="conteudo-d-div">
-            <h2>QUEM SOU<a name="Quem-sou"></a></h2>
+        <div class="conteudo-d-div" style="display: block; width: 50%;">
+            <h2>Quem é Kaciel Aires<a name="Quem-sou"></a></h2>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nihil pariatur, totam quidem eius sed quibusdam eos explicabo beatae dolorem commodi temporibus quam quaerat perspiciatis necessitatibus! Dolorum deserunt corporis ab?</p>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore impedit necessitatibus perspiciatis libero nemo dolores assumenda facilis amet ipsa laboriosam, suscipit, modi soluta iste dolorum maxime aut, ratione cupiditate porro.</p>
-            
+            <p>
+                <strong> sou Kaciel Aires</strong>, estudante, designer gráfico, desenvolvedor de soluções tecnolócias e de negócios. 
+                Sou um sonhador por natureza, acredito que <strong> é a base para construir um mundo melhor</strong> para todos e a tecnologia serve para nos ajudar a alcansar esses sonhos, desde um simples site para divulgar o seu negócio ou empresa ou até mesmo uma tecnologia aplicada ao campo (agricultura), capaz de aumentar a produção, reduzindo custos e melhorando a qualidade . É assim que podemos mudar o mundo, todos juntos e com a ajuda das poderozas ferramentas tecnolócias.
+            </p>
+            <br>
+            <p>
+                Se você é como eu e sonha elevar o seu negócio para um próximo nível, gerar impacto positivo para o mundo e para a sociedade e ainda tirar disso o seu sustento continua comigo que eu vou te mostrar o caminho.
+            </p>
 
         </div>
+
+        <div style="display: block; width: 50%;">
+            <img src="img/laptop-PEQUENO.jpg" alt="">
+        </div>
+
     </div>
 
     <hr>
