--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div>
-        <div class="conteudo-d-div" style="display: block; width: 50%;">
+        <div class="conteudo-d-div" style="display: block; width: 50%; clear: both;">
             <h2>Quem é Kaciel Aires<a name="Quem-sou"></a></h2>
             
             <p>
