--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </div>
 
-    <div>
+    <div style="display: block; width: auto; clear: both;">
         
          
             <img src="img/2x/1@2x.png" alt="" width="100%">
