--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
 
             <p>
-                Hoje tudo mudou, a pândemia acelerou o processo de digitalização e de conexão do mundo inteiro. Agora é imprescindível ter pelo menos um site na internet para que seus clientes possam te encontrar com facilidade ou pelo menos obter informações básicas sobre a sua empresa ou mesmo uma estrutura mais poderoza capaz de disponibilizar seus produtos para a compra online, sem que o cliente se quer precise sair do conforto da sua casa. 
+                Hoje tudo mudou, a pândemia acelerou o processo de digitalização e de conexão do mundo inteiro. Agora é imprescindível ter pelo menos um site na internet para que seus clientes possam te encontrar com facilidade ou pelo menos obter informações básicas sobre a sua empresa ou mesmo uma estrutura mais poderoza capaz de disponibilizar seus produtos para a compra online, sem que o cliente se quer precise sair do conforto da sua casa. As empresas é claro não perderam tempo, o Brasil é um dos países que mais compra pela internet, e acho importante ressaltar que as empresas que mais cresceram durante a pandemia foram justamente aquelas que já investiam na venda de produtos pela internet. 
             </p>
 
         </div>
