--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     </div>
 
     <div>
-        <div class="conteudo-d-div" style="display: block; width: 50%; clear: both; text-align: left;">
+        <div class="conteudo-d-div" style="display: block; width: 50%; clear: both;">
             <h2>Quem é Kaciel Aires<a name="Quem-sou"></a></h2>
             
             <p>
-                <strong> sou Kaciel Aires</strong>, estudante, designer gráfico, desenvolvedor de soluções tecnolócias e de negócios. 
-                Sou um sonhador por natureza, acredito que <strong> é a base para construir um mundo melhor</strong> para todos e a tecnologia serve para nos ajudar a alcansar esses sonhos, desde um simples site para divulgar o seu negócio ou empresa ou até mesmo uma tecnologia aplicada ao campo (agricultura), capaz de aumentar a produção, reduzindo custos e melhorando a qualidade . É assim que podemos mudar o mundo, todos juntos e com a ajuda das poderozas ferramentas tecnolócias.
+                <strong> Sou Kaciel Aires</strong>, estudante, designer gráfico, desenvolvedor de soluções tecnolócias e de negócios. 
+                Sou um sonhador por natureza, acredito que <strong>sonhar é a base para construir um mundo melhor</strong> para todos e tudo começa de um sonho. E a tecnologia serve para nos ajudar a alcansar esses sonhos, desde um simples site para divulgar o seu negócio ou empresa ou até mesmo uma tecnologia aplicada ao campo (agricultura), capaz de aumentar a produção, reduzindo custos e melhorando a qualidade . É assim que podemos mudar o mundo, todos juntos e com a ajuda das poderozas ferramentas tecnolócias.
             </p>
             <br>
             <p>
@@ -62,7 +62,7 @@
 
         </div>
 
-        <div style="display: block; width: 50%;">
+        <div style="display: block; width: 50%; clear: both;">
             <img src="img/laptop-PEQUENO.jpg" alt="">
         </div>
 
