--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div style="display: block; width: 50%; clear: both;">
-            <img src="img/laptop-PEQUENO.jpg" alt="">
+           <!-- <img src="img/laptop-PEQUENO.jpg" alt=""> -->
         </div>
 
     </div>
