Teste do dropdown

--- a/index.html
+++ b/index.html
@@ -45,8 +45,16 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#Portfolio">CONTATO</a>
                   </li>
+
+                  
+
+                  <!--
+
+                    Comentei esse trecho do código para testar se o Toogle precisa dessa parte para gerar o menu dropdown quando a página é reduzida de tamanho e o menu hamburguer é acionado.
+
+
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                       Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,7 +64,7 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
-                  
+                   -->
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
