--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-success">
             <div class="container-fluid">
-              <a class="navbar-brand btn-light" href="#">Kaciel Aires</a>
+              <a class="navbar-brand" href="#">Kaciel Aires</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
