--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-success">
+        <nav class="navbar navbar-expand-lg navbar-light bg-success text-light">
             <div class="container-fluid">
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
