--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-success text-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-success ">
             <div class="container-fluid">
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
@@ -31,19 +31,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#Quem-sou">Home</a>
+                    <a class="nav-link active text-light" aria-current="page" href="#Quem-sou">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Trabalho">O QUE EU FAÇO</a>
+                    <a class="nav-link text-light" href="#Trabalho">O QUE EU FAÇO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Portfolio">PORTFÓLIO</a>
+                    <a class="nav-link text-light" href="#Portfolio">PORTFÓLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Portfolio">BLOG</a>
+                    <a class="nav-link text-light" href="#Portfolio">BLOG</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Portfolio">CONTATO</a>
+                    <a class="nav-link text-light" href="#Portfolio">CONTATO</a>
                   </li>
 
                   
