--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-#9DC31A ">
             <div class="container-fluid">
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon bg-light"></span>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
+                <span class="navbar-toggler-icon text-light"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
