--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span class="navbar-toggler-icon bg-light"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-contend-end">
                   <li class="nav-item">
                     <a class="nav-link active text-light" aria-current="page" href="#Quem-sou">Home</a>
                   </li>
