--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="container-fluid">
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon bg-light"></span>
+                <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-contend-end">
@@ -40,7 +40,7 @@
                     <a class="nav-link text-light" href="#Portfolio">PORTFÓLIO</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="#Portfolio">BLOG</a>
+                    <a class="nav-link text-light disable" href="#Portfolio">BLOG</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-light" href="#Portfolio">CONTATO</a>
