--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-contend-end">
                   <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="#Quem-sou">Home</a>
+                    <a class="nav-link active " aria-current="page" href="#Quem-sou">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-light" href="#Trabalho">O QUE EU FAÇO</a>
