--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-success ">
+
             <div class="container-fluid">
+
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
                 <span class="navbar-toggler-icon text-light"></span>
               </button>
+
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0 navbar-light">
                   <li class="nav-item">
                     <a class="nav-link text-light " aria-current="page" href="#Quem-sou">Home</a>
