--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
-                <span class="navbar-toggler-icon text-light"></span>
+                <span class="navbar-toggler-icon navbar-light"></span>
               </button>
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
