--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" >
                 <span class="navbar-toggler-icon navbar-light"></span>
               </button>
 
