--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <section id="home" class="d-flex">
          
-        <div class="container align-self-center" >
+        <div class="container align-self-center bg-dark" >
           <div class="row">
             <div class="col-md-12 capa">
               
