--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
 
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" >
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" >
                 <span class="navbar-toggler-icon navbar-light"></span>
               </button>
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse" id="navbar">
 
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0 navbar-light">
                   <li class="nav-item">
