--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
               <div class="collapse navbar-collapse" id="navbar">
 
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0 navbar-light">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0 navbar-toggler-light">
                   <li class="nav-item">
                     <a class="nav-link text-light " aria-current="page" href="#Quem-sou">Home</a>
                   </li>
