--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-success ">
+        <nav class="navbar navbar-expand-md navbar-light bg-success ">
 
             <div class="container-fluid">
 
               <a class="navbar-brand text-light" href="#">Kaciel Aires</a>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" >
+              <button class="navbar-toggler"  data-bs-toggle="collapse" data-bs-target="#navbar" >
                 <span class="navbar-toggler-icon navbar-light"></span>
               </button>
 
