--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     </header>
 
 
-    <section id="home" class="d-flex">
+    <section id="home" class="d-flex bg-dark">
          
-        <div class="container align-self-center bg-dark" >
+        <div class="container align-self-center " >
           <div class="row">
             <div class="col-md-12 capa">
               
