--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
     </section>
    
     <footer>
-        <h4>Todos os direitos reservados &#174 | By Kaciel Aires</h4>
+        <h5>Todos os direitos reservados &#174 | By Kaciel Aires</h5>
+        <h6>CNPJ: 22.018.487/0001-72</h6>
     </footer>
     
 </body>
