--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
 
         <!-- INICIO BARRA DE NAVEGAÇÃO -->
-        <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top bg-success">
           <div class="container">
 
 
