--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand" href="#">Kaciel Aires</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
