--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section id="home" class="d-flex bg-dark">
          
-        <div class="container align-self-center " >
+        <div class="container" >
           <div class="row">
             <div class="col-md-12 capa">
               
