--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <a class="navbar-brand" href="#">Kaciel Aires</a>
+            <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
