--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    
 
 
-    <section id="home" class="d-flex bg-dark">
+    <section id="home" class="d-flex bg-dark" whith="100%">
          
         <div class="container" >
           <div class="row">
