--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
+
     <link rel="stylesheet" href="style.css">
+
     <title>Kaciel Aires - Design & Tecnologia</title>
+
 </head>
 
 <body>
@@ -28,8 +31,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse " id="navbarNav">
-              <ul class="navbar-nav mr-5">
+            <div class="collapse navbar-collapse mr-5" id="navbarNav">
+              <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
