--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 
 
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-md navbar-light bg-light ">
             <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">Home <span class="sr-only">Menu</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Trabalho">O QUE EU FAÇO</a>
