--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item float-md-left">
                   <a class="nav-link" href="#">Home <span class="sr-only">Menu</span></a>
                 </li>
                 <li class="nav-item">
