--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item float-md-left">
+                <li class="nav-item">
                   <a class="nav-link" href="#">Home <span class="sr-only">Menu</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Trabalho">O QUE EU FAÇO</a>
+                  <a class="nav-link" href="#Trabalho">Design</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Portfolio">PORTFÓLIO</a>
+                  <a class="nav-link" href="#Portfolio">Tecnologia</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">BLOG</a>
+                  <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li>
-                    <a class="nav-link text-light" href="#Portfolio">CONTATO</a>
+                    <a class="nav-link text-light" href="#Portfolio">Whatsapp</a>
                 </li>
               </ul>
             </div>
