--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li>
-                    <a class="nav-link text-light" href="#Portfolio">Whatsapp</a>
+                    <a class="nav-link text-success" href="#Portfolio">Whatsapp</a>
                 </li>
               </ul>
             </div>
