--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li>
-                    <a class="nav-link text-success" href="#Portfolio">Whatsapp</a>
+                    <a class="nav-link" href="#Portfolio"><button class="btn btn-success text-white" type="button"><i class="fa-brands fa-whatsapp"></i></button></a>
                 </li>
               </ul>
             </div>
