--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <header class="fixed-top">
-        <nav class="navbar navbar-expand-md navbar-light bg-light ">
+        <nav class="navbar navbar-expand-md navbar-light bg-light pd-5">
             <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
