--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section id="home" class="d-flex bg-dark" whith="100%">
          
-        <div class="container" >
+        <div class="container-fluid" >
           <div class="row">
             <div class="col-md-12">
               
