--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
                     
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nihil pariatur, totam quidem eius sed quibusdam eos explicabo beatae dolorem commodi temporibus quam quaerat perspiciatis necessitatibus! Dolorum deserunt corporis ab?</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore impedit necessitatibus perspiciatis libero nemo dolores assumenda facilis amet ipsa laboriosam, suscipit, modi soluta iste dolorum maxime aut, ratione cupiditate porro.</p>v
-
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore impedit necessitatibus perspiciatis libero nemo dolores assumenda facilis amet ipsa laboriosam, suscipit, modi soluta iste dolorum maxime aut, ratione cupiditate porro.</p>
+                </div>
+            </div>        
     <section>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
