--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
          
         <div class="container-fluid" >
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 ">
               
-                <div class="text-light">
+                <div class="text-light pd-30px">
                     <p>
                         <strong> Sou Kaciel Aires</strong>, estudante, designer gráfico, desenvolvedor de soluções tecnolócias e de negócios. 
                         Sou um sonhador por natureza, acredito que <strong>sonhar é a base para construir um mundo melhor</strong> para todos e tudo começa de um sonho. E a tecnologia serve para nos ajudar a alcansar esses sonhos, desde um simples site para divulgar o seu negócio ou empresa ou até mesmo uma tecnologia aplicada ao campo (agricultura), capaz de aumentar a produção, reduzindo custos e melhorando a qualidade . É assim que podemos mudar o mundo, todos juntos e com a ajuda das poderozas ferramentas tecnolócias.
