--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <div class="row">
                 <div class="col-md-6 ">
                   
-                    <div class="text-light pd-30px">
+                    <div class="text-light p-30px">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente totam nesciunt placeat! Ducimus itaque numquam non beatae enim laborum dolorum, rem optio autem placeat quisquam laudantium repellat, quasi nulla necessitatibus. <br>
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis magnam fuga molestiae in tempora esse saepe minima ab ipsum, sit laboriosam, modi architecto numquam non nulla unde, maxime laudantium pariatur.
