--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
     
-      <section id="home" class="d-flex bg-dark" whith="100%">
+      <section id="home" class="d-flex bg-dark" >
          
         <div class="container-fluid" >
           <div class="row">
