--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div class="col-md-6">
               
-               <div class="conteudo-d-div">
+               <div class="conteudo-d-div img-conteudo">
                 <img class="img-fluid d-block" src="img/workspace-1280538_19200-PEQUENA.jpg" alt="" width="auto">
                </div>
                 
