--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Blog</a>
                 </li>
-                <li>
-                    <a class="nav-link" href="https://api.whatsapp.com/send?phone=+5511910383280"><button class="btn btn-success text-white" type="button"><i class="fa-brands fa-whatsapp"></i></button></a>
+                <li class="nav-item">
+                    <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp"></i></a>
                 </li>
               </ul>
             </div>
