Correção da Home 1
Primeira correção da Home

--- a/index.html
+++ b/index.html
@@ -25,33 +25,79 @@
 
 
 
-    <header class="fixed-top">
+    <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light pd-5">
-            <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto my-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="#home">Home <span class="sr-only">Menu</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Trabalho">Design</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#Portfolio">Tecnologia</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp"></i></a>
-                </li>
-              </ul>
+
+            <div>
+
+                <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
+
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar-nav ml-auto my-auto">
+                        <li class="nav-item">
+                        <a class="nav-link" href="#home">Home <span class="sr-only">Menu</span></a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#Trabalho">Design</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#Portfolio">Tecnologia</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp"></i></a>
+                        </li>
+                    </ul>
+
+                </div>
+
             </div>
+
           </nav>
     </header>
+    <!--FIM DO CABEÇALHO (MENU)-->
+
+
+
+    <!--INÍCIO DA SEÇÃO HOME (CAPA DO SITE OU PÁGINA DE APRESENTAÇÃO)-->
+    <section id="home">
+        <div class="container">
+            <div class="row">
+                <!--INÍCIO DOS TEXTOS DA SEÇÃO HOME-->
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h1 class="display-4">
+                            Tecnologia muda tudo!
+                        </h1>
+
+                        <p>
+                            Um mundo melhor começa com 
+                        um sonho e a tecnologia pode nos 
+                        ajudar a alcançar esse sonho
+                        </p>
+
+                    </div>
+
+                </div>
+                <!--FIM DOS TEXTOS-->
+
+                <!--INÍCIO DO LADO DA HOME ONDE FICA A IMAGEM-->
+
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="img/Eu-de-terno-azul-web.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+    </section>
 
    
 
