--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 
 
-
+    <!--INÍCIO DO CABEÇALHO (MENU)-->
     <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light pd-5">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
 
             <div>
 
