--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    
+                    <span class="navbar-toggler-icon"></span>
+                    
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -91,7 +93,7 @@
                 <!--INÍCIO DO LADO DA HOME ONDE FICA A IMAGEM-->
 
                 <div class="col-md-6 d-none d-md-block">
-                    <img src="img/Eu-de-terno-azul-web.png" alt="">
+                    <img width="600px" height="auto" src="img/Eu-de-terno-azul-web.png" alt="">
                 </div>
 
             </div>
