--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp"></i></a>
+                            <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/whatsapp_logo_png_transparente.png" width="10px" height="auto" alt=""></i></a>
                         </li>
                     </ul>
 
