--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
 
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                         <a class="nav-link" href="#home">Home <span class="sr-only">Menu</span></a>
                         </li>
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ml-4" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
+                            <a class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
                         </li>
                     </ul>
 
