--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div>
 
-                <a class="navbar-brand" href="#">Kaciel Aires - Tecnologia & Design</a>
+                <a class="navbar-brand" href="#"> <img src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt=""> Tecnologia & Design</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     
@@ -75,7 +75,9 @@
                 <!--INÍCIO DOS TEXTOS DA SEÇÃO HOME-->
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1 class="display-4">
+                        <h1>Kaciel Aires</h1>
+                        <br>
+                        <h1 class="display-3">
                             Tecnologia muda tudo!
                         </h1>
 
