--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <!--INÍCIO DOS TEXTOS DA SEÇÃO HOME-->
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1>Kaciel Aires</h1>
+                        <h1 class="display-3">Kaciel Aires</h1>
                         <br>
-                        <h1 class="display-3">
+                        <h1 class="display-4">
                             Tecnologia muda tudo!
                         </h1>
 
