--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
 
-                    <ul class="navbar-nav ml-auto mr-5">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                         <a class="nav-link" href="#home">Home <span class="sr-only">Menu</span></a>
                         </li>
