--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
 
-            <div>
+            <div class="container">
 
                 <a class="navbar-brand" href="#"> <img src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt=""> Tecnologia & Design</a>
 
