--- a/index.html
+++ b/index.html
@@ -98,10 +98,14 @@
                     <img width="600px" height="auto" src="img/Eu-de-terno-azul-web.png" alt="">
                 </div>
 
+                 <!--FIM DO LADO DA HOME ONDE FICA A IMAGEM-->
+
             </div>
 
         </div>
     </section>
+
+    <i class="fab fa-apple"></i>
 
    
 
