--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
+                            <a class="btn btn-outline-success mr-5" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
                         </li>
                     </ul>
 
