--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="container">
 
-                <a class="navbar-brand" href="#"> <img src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt=""> Tecnologia & Design</a>
+                <a class="navbar-brand" href="#"> <img class="ml-5" src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt=""> Tecnologia & Design</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     
