--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
             <div class="container">
 
-                <a class="navbar-brand" href="#"> <img class="ml-5" src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt=""> Tecnologia & Design</a>
+                <a class="navbar-brand" href="#"> 
+                    <img  src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt="">
+                    <span class="ml-5">Tecnologia & Design</span>
+                </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     
@@ -54,7 +57,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success mr-5" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
+                            <a class="btn btn-outline-success ml-5" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
                         </li>
                     </ul>
 
