--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <a class="navbar-brand" href="#"> 
                     <img  src="img/2x/Ativo 1@2x.png" height="40px" width="auto" alt="">
-                    <span class="ml-5">Tecnologia & Design</span>
+                    <span class="ml-3">Tecnologia & Design</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-success ml-5" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
+                            <a class="btn btn-outline-success ml-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><img src="img/WHATSAPP.png" width="25px" height="auto" alt=""></i></a>
                         </li>
                     </ul>
 
@@ -85,9 +85,11 @@
                         </h1>
                         <br>
                         <p>
-                            Um mundo melhor começa com 
-                        um sonho e a tecnologia pode nos 
-                        ajudar a alcançar esse sonho
+                            <h4>Um mundo melhor começa com 
+                                um sonho e a tecnologia pode nos 
+                                ajudar a alcançar esse sonho
+                            </h4>
+                            
                         </p>
 
                     </div>
