--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-behance"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a class="btn btn-success ml-md-3" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                 </div>
 
             </div>
