--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="row">
 
                 <!--DIV COM AS INFORMAÇÕES BÁSICAS DA EMPRESA-->
-                <div class="col-md-8">
+                <div class="col-md-8 d-flex justify-contend-start">
                     <p>
                         <h6>Todos os direitos reservados &#174 | By Kaciel Aires</h6>
                         <h6>CNPJ: 22.018.487/0001-72</h6>
