--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
      <!--INÍCIO DO RODAPÉ-->
    
-    <footer class="mt-4">
+    <footer class="mt-4 pd-4">
 
         <div class="container">
             <div class="row">
