--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <a href=""><i class="fa-brands fa-facebook fa-xl btn btn-light bg-light"></i></a>
                     <a href=""><i class="fa-brands fa-instagram ml-3 fa-xl btn-light"></i></a>
                     <a href=""><i class="fa-brands fa-behance ml-3 fa-xl btn-light"></i></a>
-                    <a href=""><i class="fa-brands fa-github ml-3 fa-xl btn-light"></i></a>
+                    <a href=""><i class="fa-brands fa-github ml-3 fa-xl light"></i></a>
                     <a href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl btn-light"></i></a>
                 </div>
 
