--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
 
                 <!--DIV COM OS ÍCONES DE REDES SOCIAIS DO RODAPÉ-->
-                <div class="col-md-4 d-flex justify-contend-end">
+                <div class="col-md-4 d-flex justify-content-end">
 
                     <a class="text-light" href=""><i class="fa-brands fa-facebook ml-3 fa-xl"></i></a>
                     <a class="text-light" href=""><i class="fa-brands fa-instagram ml-3 fa-xl"></i></a>
