--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                        <a class="nav-link link:focus-success" href="#home">Home <span class="sr-only">Menu</span></a>
+                        <a class="nav-link link:hover-success" href="#home">Home <span class="sr-only">Menu</span></a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#Trabalho">Design</a>
