--- a/index.html
+++ b/index.html
@@ -158,12 +158,18 @@
 
                 <!--DIV COM AS INFORMAÇÕES BÁSICAS DA EMPRESA-->
                 <div class="col-md-8 d-flex justify-contend-start">
-                    <p>
-                        <h6>Todos os direitos reservados &#174 | By Kaciel Aires</h6>
-                        <br>
-                        <br>
-                        <h6>CNPJ: 22.018.487/0001-72</h6>
-                    </p>
+
+                    <div>
+                        <p>
+                            Todos os direitos reservados &#174 | By Kaciel Aires
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            CNPJ: 22.018.487/0001-72
+                        </p>
+                    </div>
+                   
 
                 </div>
 
