--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <!--INÍCIO DO LADO DA HOME ONDE FICA A IMAGEM-->
 
                 <div class="col-md-6 d-none d-md-block">
-                    <img width="600px" height="auto" src="img/Eu-de-terno-azul-web.png" alt="">
+                    <img class="img-fluid" src="img/Eu-de-terno-azul-web.png" alt="">
                 </div>
 
                  <!--FIM DO LADO DA HOME ONDE FICA A IMAGEM-->
@@ -118,7 +118,10 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        textos
+                        <h2>Lorem ipsum dolor sit amet.</h2>
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, in. Doloribus numquam cupiditate iste quam magnam repellendus, blanditiis iusto id dolore necessitatibus laudantium quod repellat obcaecati accusamus harum nostrum at.
+                        </p>
                     </div>
 
                 </div>
