--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     
     <!--SEÇÃO DE DESIGN-->
 
-    <section>
+    <section class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
@@ -139,7 +139,7 @@
 
     <!--SEÇÃO TECNOLOGIA-->
    
-    <section>
+    <section class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
@@ -171,7 +171,7 @@
     <!--SEÇÃO CARROSSEL-->
 
     
-    <section>
+    <section class="caixa">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
