--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                     <a class="text-light" href="https://github.com/Kaciel"><i class="fa-brands fa-github ml-3 fa-xl "></i></a>
 
-                    <a class="text-light" href="https://www.linkedin.com/in/kaciel-aires-614903177/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a class="text-light" href="https://www.linkedin.com/in/kaciel-aires-614903177/"><i class="fa-brands fa-linkedin ml-3 fa-xl"></i></a>
                     
 
                     <a class="text-light" href="https://api.whatsapp.com/send?phone=+5511910383280"><i class="fa-brands fa-whatsapp ml-3 fa-xl"></i></a>
